# tweakio-sdk

./: .gitignore  .pre-commit-config.yaml  Agents.md  CHANGELOG.md  ChatLoader.py  Custom_logger.py  MessageProcessor.py  OSCG_MENTORS_Guidelines.md  README.md  login.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  verify_advanced_logging.py  verify_logging.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
camouchat/: __init__.py  camouchat_logger.py
camouchat/BrowserManager/: browser_config.py  browserforge.py  browserforge_manager.py  camoufox_browser.py  profile_manager.py
camouchat/BrowserManager/Interfaces/: __init__.py
camouchat/Encryption/: __init__.py
camouchat/Exceptions/: __init__.py
camouchat/Filter/: message_filter.py
camouchat/Interfaces/: __init__.py  chat_interface.py  chat_processor_interface.py  login_interface.py  message_interface.py  message_processor_interface.py  storage_interface.py  web_ui_selector.py
camouchat/StorageDB/: sqlalchemy_storage.py
camouchat/WhatsApp/: __init__.py  chat_processor.py  human_interaction_controller.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
camouchat/WhatsApp/api/: __init__.py  chat_api_processor.py  msg_api_processor.py
camouchat/WhatsApp/decorator/: __init__.py  msg_event_hook.py
camouchat/WhatsApp/features/: interaction_controller.py
camouchat/WhatsApp/models/: chat.py  chat_api.py  message.py  message_api.py
camouchat/contracts/: message_processor.py
docs/: contracts.md  encryption.md  logging_and_errors.md  metadata.md  profile_manager_design_v0_1_6.md  quickstart.md  smoke_test.py
docs/BrowserManager/: CamoufoxBrowser.md  ProfileInfo.md  ProfileInfo_&_PlatformManager.md
src/: __init__.py  browser_logger.py  custom_logger.py  directory.py
src/BrowserManager/: __init__.py  browser_config.py  browser_manager.py  browserforge_manager.py  camoufox_browser.py  platform_manager.py  profile_info.py  profile_manager.py  runtime_state.py
src/Decorators/: __init__.py
src/Encryption/: __init__.py  decryptor.py  encryptor.py  key_manager.py
src/Exceptions/: __init__.py  whatsapp.py
src/FIlter/: __init__.py
src/Interfaces/: __init__.py  chat_interface.py  chat_processor_interface.py  humanize_operation_interface.py  login_interface.py  media_capable_interface.py  message_interface.py  message_processor_interface.py  reply_capable_interface.py  storage_interface.py  web_ui_selector.py
src/StorageDB/: __init__.py  models.py  sqlalchemy_storage.py  sqlite_db.py
src/WhatsApp/: __init__.py  chat_processor.py  humanized_operations.py  login.py  media_capable.py  message_processor.py  reply_capable.py  web_ui_config.py
src/camouchat_core/: __init__.py  logger.py
tests/: smoke_test.py  test_global_metadata.py  test_logger.py
tests/E2E/: script_msgEvent.py  test_msgEvent.py
tests/Encryption/: test_encryption.py
tests/integration/: test_browser_logging_integration.py
(+44 files in other folders)
