[build-system]
requires = ["uv_build>=0.6.6,<0.7.0"]
build-backend = "uv_build"

[project]
name = "camouchat-core"
version = "0.7.1"
description = "Anti-detection Account automation SDK. Standardized protocols, async-first, and encrypted storage."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]
maintainers = [{ name = "BITS-Rohit", email = "rohitguptaradheradhe123@gmail.com" }]

keywords = [
    "whatsapp",
    "whatsapp-automation",
    "whatsapp-bot",
    "whatsapp-web",
    "whatsapp-api",
    "whatsapp-api-alternative",
    "playwright",
    "camoufox",
    "anti-detection",
    "browser-automation",
    "encrypted-storage",
    "aes-256",
    "e2e-encryption",
    "async",
    "sqlite",
    "postgresql",
    "camouchat",
    "stealth",
    "bypass",
    "chat-bot",
    "agents",
    "automation-framework",
    "web-automation"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

dependencies = [
    "cryptography>=41.0.0",
    "colorlog>=6.10.1",
    "concurrent-log-handler>=0.9.29",
]

[project.urls]
Homepage = "https://github.com/CamouChat-Team"
Repository = "https://github.com/CamouChat-Team/camouchat-core"
"Bug Tracker" = "https://github.com/CamouChat-Team/camouchat-core/issues"
Changelog = "https://github.com/CamouChat-Team/camouchat-core/releases"


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=camouchat_core --cov-report=term-missing"

[tool.coverage.run]
source = ["camouchat_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.deptry]
known_first_party = ["camouchat_core"]

[tool.deptry.per_rule_ignores]
DEP002 = ["concurrent_log_handler", "colorlog"]
DEP003 = ["camouchat_core"]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "mypy>=1.20.0",
    "ruff>=0.15.8",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
